--- a/package.json
+++ b/package.json
@@ -88,7 +88,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.1",
-
     "react-instantsearch": "^7.3.0",
     "react-instantsearch-dom": "^6.40.4",
     "react-markdown": "^8.0.0",
@@ -109,6 +108,7 @@
     "vfile": "^5.3.7"
   },
   "devDependencies": {
+    "@google-analytics/data": "^4.4.0",
     "@trevorblades/eslint-config": "^7.2.7",
     "cpx": "^1.5.0",
     "eslint": "^7.32.0",
